# web5-indexer

./: Cargo.toml  Dockerfile  LICENSE  README.md
db_schema/: create_table.sql
src/: http_server.rs  lib.rs  monitor.rs  pg_read.rs  pg_write.rs  rpc_client.rs  types.rs
src/molecule/: did_cell.mol  did_cell.rs  mod.rs
